src/test/NewArrayDifferentTypeFail/NewArrayDifferentTypeFail.expected
error: NewArrayDifferentTypeFail.panda:2:10: expected 'panda.core.MutableString', but found 'panda.collections.ImmutableArray<panda.core.String>'
error: NewArrayDifferentTypeFail.panda:5:10: expected 'panda.core.Int64', but found 'panda.collections.ImmutableArray<panda.core.Int32>'
2 errors
