src/test/NewArrayDifferentTypeFail/NewArrayDifferentTypeFail.panda
var a:ImmutableArray<String> := ["Hello", "Goodbye"]
var b := new Array<MutableString>(a, 0, a.length)

var c:ImmutableArray<Int32> := [1, 5, 7, 12, -52]
var d := new Array<Int64>(c, 0, c.length)
